--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "clean": "lerna run clean",
     "build": "lerna run build --stream",
     "start": "lerna run start --stream",
     "dev": "lerna run dev --stream"
