--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -5,17 +5,19 @@
   "author": "Kolobok12309 <sova123409@gmail.com>",
   "private": true,
   "license": "MIT",
-  "main": "src/main.ts",
+  "main": "dist/src/main.js",
+  "types": "dist/src/main.d.ts",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "yarn run clean",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "cross-env DEBUG=app:* nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev": "cross-env DEBUG=@hb/back:* nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "dev": "yarn run start:dev",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/src/main",
-    "start:prod:debug": "cross-env NODE_ENV=production DEBUG=app:* node dist/src/main",
+    "start:prod:debug": "cross-env NODE_ENV=production DEBUG=@hb/back:* node dist/src/main",
+    "clean": "rimraf dist",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
