--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,24 +1,10 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
     "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "sourceRoot": "/",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "src/*"
-      ],
-      "~/*": [
         "*"
       ]
     }
