--- a/packages/back/tsconfig.json
+++ b/packages/back/tsconfig.json
@@ -1,15 +1,27 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "dist",
+    "rootDir": ".",
     "baseUrl": ".",
+    "composite": true,
     "paths": {
       "@/*": [
-        "*/src"
+        "src/*"
       ],
       "~/*": [
         "*"
       ]
     }
-  }
+  },
+  "include": [
+    "src/**/*",
+    "migrations/*",
+    "package.json"
+  ],
+  "references": [
+    {
+      "path": "../types"
+    }
+  ]
 }
