--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,16 +5,16 @@
   "author": "Kolobok12309 <sova123409@gmail.com>",
   "private": true,
   "license": "MIT",
-  "main": "/dist/index.js",
-  "types": "/dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "prepare": "yarn run build",
     "prebuild": "yarn run clean",
-    "clean": "rimraf dist"
+    "clean": "tsc -b --clean"
   },
   "engines": {
     "node": "12.x",
