Fix swagger enum bug and dbmodule

--- a/packages/back/tsconfig.json
+++ b/packages/back/tsconfig.json
@@ -7,10 +7,10 @@
     "composite": true,
     "paths": {
       "@/*": [
-        "src/*"
+        "./src/*"
       ],
       "~/*": [
-        "*"
+        "./*"
       ]
     }
   },
