--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -45,6 +45,7 @@
     "yarn": "1.x"
   },
   "dependencies": {
+    "@hb/types": "^1.0.0",
     "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
@@ -57,6 +58,7 @@
     "@sentry/integrations": "^6.4.1",
     "@sentry/node": "^6.4.1",
     "@sentry/tracing": "^6.4.1",
+    "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -72,8 +74,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.32",
-    "@hb/types": "^1.0.0"
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
