feat(back): :sparkles: Add storage module for working with files

--- a/packages/back/.env.example
+++ b/packages/back/.env.example
@@ -2,3 +2,8 @@ SENTRY_DSN=
 DEBUG=app:*
 JWT_SECRET=my_jwt_secret
 STATIC_PATH=./uploads
+S3=
+S3_ACCESS_KEY=
+S3_SECRET_ACCESS_KEY=
+S3_URL=
+S3_BUCKET=
