--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -12,7 +12,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "cross-env DEBUG=@hb/back:* nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev": "cross-env DEBUG=@hb/back:* nest start --watch",
     "dev": "yarn run start:dev",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/src/main",
@@ -59,6 +59,7 @@
     "@sentry/node": "^6.4.1",
     "@sentry/tracing": "^6.4.1",
     "@types/multer": "^1.4.5",
+    "aws-sdk": "^2.931.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
