--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,33 @@ services:
     environment:
       DB_HOST: db
       HOST: 0.0.0.0
+      S3: true
+      S3_ACCESS_KEY: minio
+      S3_SECRET_ACCESS_KEY: minio123
+      S3_URL: http://localhost:9000
+      S3_BUCKET: my-test-bucket
+
     ports:
       - 3000:3000
     depends_on:
       - db
+      - minio
+
+  minio:
+    image: minio/minio
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    volumes:
+      - ./packages/back/uploads/s3:/data
+    ports:
+      - '9000:9000'
+    command: server /data
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:9000/minio/health/live']
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
   adminer:
     image: adminer
