--- a/packages/back/.env.example
+++ b/packages/back/.env.example
@@ -1,5 +1,15 @@
+HOST=0.0.0.0
+PORT=3000
+DATABASE_URL=
+DB_SYNC=
+DB_SSL=
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
 SENTRY_DSN=
-DEBUG=app:*
+DEBUG=@hb/back:*
 JWT_SECRET=my_jwt_secret
 STATIC_PATH=./uploads
 S3=
