--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -13,32 +13,34 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@hb/back": "^1.0.0",
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "@hb/back": "^1.0.0",
     "dotenv": "^10.0.0",
-    "vuetify": "^2.5.5",
-    "vue": "^2.6.14"
+    "nuxt": "^2.15.3",
+    "vue": "^2.6.14",
+    "vuetify": "^2.5.5"
   },
   "devDependencies": {
+    "@hb/types": "^1.0.0",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/vuetify": "^1.11.3",
-    "@vue/test-utils": "^1.1.3",
-    "@hb/types": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
-    "eslint-plugin-import": "^2.22.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
@@ -47,9 +49,8 @@
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
-    "ts-loader": "^8.0.18",
     "ts-jest": "^26.5.4",
-    "vue-jest": "^3.0.4",
-    "cross-env": "^7.0.3"
+    "ts-loader": "^8.0.18",
+    "vue-jest": "^3.0.4"
   }
 }
