--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -15,7 +15,7 @@
     "start:dev": "cross-env DEBUG=@hb/back:* nest start --watch",
     "dev": "yarn run start:dev",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/src/main",
+    "start:prod": "yarn run migrations:prod && cross-env NODE_ENV=production node dist/src/main",
     "start:prod:debug": "cross-env NODE_ENV=production DEBUG=@hb/back:* node dist/src/main",
     "clean": "rimraf dist",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -41,7 +41,7 @@
     "release:major": "yarn run release -- --release-as major"
   },
   "engines": {
-    "node": "12.x",
+    "node": "14.x",
     "yarn": "1.x"
   },
   "dependencies": {
