Fix breed updates and breadcrumbs

--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.9.1",
     "dotenv": "^10.0.0",
     "flatry": "^1.0.12",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.15.3",
     "vue": "^2.6.14",
