--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "yarn": "1.19.x"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^27.0.4",
     "lerna": "^4.0.0"
-  }
+  },
+  "dependencies": {}
 }
