--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -64,6 +64,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
     "debug": "^4.3.1",
     "multer": "^1.4.2",
     "node-mailer": "^0.1.1",
