Try disable preserveSymlink

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "strict": false,
     "sourceMap": true,
     "inlineSources": true,
-    "preserveSymlinks": true
+    "preserveSymlinks": false
   }
 }
