--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -53,7 +53,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.17",
-    "@nestjs/swagger": "^4.8.0",
+    "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.1.5",
     "@sentry/integrations": "^6.4.1",
     "@sentry/node": "^6.4.1",
@@ -77,9 +77,9 @@
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
     "tsconfig-paths": "^3.9.0",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.32",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
