Remove useless scripts from @hb/back

--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -34,11 +34,7 @@
     "seed:run": "yarn run typeorm migration:run -c seed",
     "seed:revert": "yarn run typeorm migration:revert -c seed",
     "migrations:run": "yarn run migration:run && yarn run seed:run",
-    "migrations:prod": "cross-env NODE_ENV=production yarn run typeorm migration:run && yarn run typeorm migration:run -c seed",
-    "release": "standard-version",
-    "release:patch": "yarn run release -- --release-as patch",
-    "release:minor": "yarn run release -- --release-as minor",
-    "release:major": "yarn run release -- --release-as major"
+    "migrations:prod": "cross-env NODE_ENV=production yarn run typeorm migration:run && yarn run typeorm migration:run -c seed"
   },
   "engines": {
     "node": "14.x",
