--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -51,6 +51,9 @@
     "@nestjs/platform-express": "^7.6.17",
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjsx/crud": "^5.0.0-alpha.3",
+    "@nestjsx/crud-request": "^5.0.0-alpha.3",
+    "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "@sentry/integrations": "^6.4.1",
     "@sentry/node": "^6.4.1",
     "@sentry/tracing": "^6.4.1",
