--- a/packages/back/docker-compose_db.yml
+++ b/packages/back/docker-compose_db.yml
@@ -28,7 +28,8 @@ services:
       - ./uploads/s3:/data
     ports:
       - '9000:9000'
-    command: server /data
+      - '9001:9001'
+    command: server /data --console-address ":9001"
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:9000/minio/health/live']
       interval: 30s
