--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -9,17 +9,16 @@
     "build:dev": "cross-env DEBUG=@hb/front:* nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
-    "lint": "yarn lint:js && yarn lint:style",
-    "test": "jest"
+    "lint": "pnpm lint:js && pnpm lint:style",
+    "test": "vitest"
   },
   "engines": {
-    "node": "14.x",
-    "yarn": "1.19.x"
+    "node": "16.x",
+    "pnpm": "7.25.x"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@hb/back": "^1.0.1",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@hb/back": "workspace:../back",
     "@nuxtjs/axios": "^5.13.1",
     "@vue/composition-api": "^1.0.0-rc.13",
     "@vuelidate/core": "^2.0.0-alpha.21",
@@ -35,7 +34,7 @@
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
-    "@hb/types": "^1.0.0",
+    "@hb/types": "workspace:../../packages/types",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
@@ -56,15 +55,12 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
-    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^4.3.3",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
-    "vue-jest": "^3.0.4"
+    "ts-loader": "^8.0.18"
   }
 }
