--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,14 +5,15 @@
   "author": "Kolobok12309 <sova123409@gmail.com>",
   "private": true,
   "license": "MIT",
-  "main": "dist/index.mjs",
+  "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "type": "module",
   ".": {
-    "types": "./dist/index.d.ts",
-    "default": "./dist/index.mjs"
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.cjs"
   },
   "scripts": {
     "build": "unbuild",
