--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -37,75 +37,76 @@
     "migrations:prod": "cross-env NODE_ENV=production yarn run typeorm migration:run && yarn run typeorm migration:run -c seed"
   },
   "engines": {
-    "node": "16.x",
-    "pnpm": "7.25.x"
+    "node": "18.x",
+    "pnpm": "8.9.x"
   },
+  "packageManager": "pnpm",
   "dependencies": {
-    "@hb/types": "workspace:../../packages/types",
-    "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/axios": "^1.0.1",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.2.1",
-    "@nestjs/jwt": "^10.0.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.1",
-    "@nestjs/swagger": "^6.1.4",
-    "@nestjs/typeorm": "^9.0.1",
+    "@hb/types": "workspace:*",
+    "@nestjs-modules/mailer": "^1.10.3",
+    "@nestjs/axios": "^3.0.1",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/swagger": "^7.2.0",
+    "@nestjs/typeorm": "^10.0.1",
     "@nestjsx/crud": "5.0.0-alpha.3",
     "@nestjsx/crud-request": "5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "5.0.0-alpha.3",
-    "@sentry/integrations": "^7.31.1",
-    "@sentry/node": "^7.31.1",
-    "@sentry/tracing": "^7.31.1",
-    "@types/multer": "^1.4.7",
-    "aws-sdk": "^2.1298.0",
-    "bcrypt": "^5.1.0",
+    "@sentry/integrations": "^7.94.1",
+    "@sentry/node": "^7.94.1",
+    "@sentry/tracing": "^7.94.1",
+    "@types/multer": "^1.4.11",
+    "aws-sdk": "^2.1540.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "multer": "1.4.5-lts.1",
-    "nodemailer": "^6.9.0",
-    "passport": "^0.6.0",
+    "nodemailer": "^6.9.8",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.1.1",
-    "rxjs": "^7.8.0",
-    "swagger-ui-express": "^4.6.0",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "typeorm": "^0.3.11",
-    "typescript": "^4.9.4"
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.14",
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.19",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.8",
-    "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.2.1",
-    "@sentry/types": "^7.31.1",
-    "@types/express": "^4.17.15",
-    "@types/jest": "^29.2.6",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.11.18",
-    "@types/passport-jwt": "^3.0.8",
-    "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.0",
+    "@sentry/types": "^7.94.1",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.5",
+    "@types/passport-jwt": "^4.0.0",
+    "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.32.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.3.1",
-    "prettier": "^2.8.3",
-    "run-script-webpack-plugin": "^0.1.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.4",
+    "run-script-webpack-plugin": "^0.2.0",
     "standard-version": "^9.5.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   },
   "jest": {
     "moduleFileExtensions": [
