--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "license": "MIT",
   "main": "dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "type": "module",
   ".": {
+    "types": "./dist/index.d.ts",
     "import": "./dist/index.mjs",
     "require": "./dist/index.cjs"
   },
@@ -22,12 +24,12 @@
     "clean": "rimraf dist"
   },
   "engines": {
-    "node": "16.x",
-    "pnpm": "7.25.x"
+    "node": "18.x",
+    "pnpm": "8.9.x"
   },
+  "packageManager": "pnpm",
   "devDependencies": {
-    "rimraf": "^4.0.5",
-    "unbuild": "^1.1.1"
-  },
-  "packageManager": "pnpm@7.25.0"
+    "rimraf": "^5.0.5",
+    "unbuild": "^2.0.0"
+  }
 }
