--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "engines": {
     "node": "18.x",
-    "pnpm": "8.9.x"
+    "pnpm": "8.9.2"
   },
-  "packageManager": "pnpm",
+  "packageManager": "pnpm@8.9.2",
   "devDependencies": {
     "cross-env": "^7.0.3"
   }
