--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -10,9 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@hb/types": "workspace:*"
+    "@hb/types": "workspace:*",
+    "@hb/locales": "workspace:*"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.0.0",
+    "@vite-pwa/nuxt": "^0.4.0",
     "nuxt": "^3.9.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
